--- a/src/components/homepage/styles/works.css
+++ b/src/components/homepage/styles/works.css
@@ -1,15 +1,23 @@
-@import "../../../data/styles.css";
-
-.works-body {
-	margin-bottom: 10px;
-}
-
 .work {
 	display: flex;
-	padding-bottom: 40px;
-	width: 400px;
+	justify-content: space-between; /* biar kiri - kanan */
+	align-items: center;
+	padding: 10px 0;
+	width: 100%; /* responsif */
 }
 
+.work-left {
+	display: flex;
+	align-items: center;
+	gap: 10px;
+}
+
+.work-title-sub {
+	display: flex;
+	flex-direction: column;
+	margin-left: 20px;
+}
+	
 .work-image {
 	height: 30px;
 	width: 30px;
@@ -21,24 +29,16 @@
 .work-title {
 	font-size: 15px;
 	font-weight: 700;
-	padding-left: 20px;
-	margin-top: -3px;
 	color: var(--secondary-color);
 }
 
 .work-subtitle {
-	position: absolute;
 	font-size: 12px;
 	color: var(--secondary-color);
-	padding-top: 22px;
-	padding-left: 50px;
 }
 
 .work-duration {
-	position: absolute;
-	width: 350px;
 	font-size: 12px;
-	padding-top: 20px;
-	text-align: right;
 	color: var(--tertiary-color);
+	white-space: nowrap; /* biar ga patah */
 }
