--- a/src/components/common/styles/Navbar.css
+++ b/src/components/common/styles/Navbar.css
@@ -17,8 +17,8 @@
 }
 
 .nav-background {
-	width: 380px;
-	height: 40px;
+	width: 500px;
+	height: 50px;
 	padding-left: 0%;
 	padding-right: 0%;
 	background: #fff;
@@ -31,14 +31,14 @@
 	justify-content: space-between;
 	list-style: none;
 	align-items: center;
-	margin-left: 16px;
-	margin-right: 20px;
-	margin-top: 11px;
+	margin-left: 24px;
+	margin-right: 24px;
+	margin-top: 16px;
 }
 
 .nav-item {
 	font-weight: bold;
-	font-size: 80%;
+	font-size: 85%;
 }
 
 a {
@@ -62,6 +62,11 @@ a:hover {
 	.nav-background {
 		width: 80%;
 		height: 40px;
+	}
+
+	.nav-list {
+		align-items: center;
+		margin-top: 12px;
 	}
 
 	.nav-item {
