--- a/src/components/projects/styles/allProject.css
+++ b/src/components/projects/styles/allProject.css
@@ -1,22 +1,22 @@
+@import "../../../data/styles.css";
+
+.all-projects-section {
+	padding: 80px 0;
+}
+
+.projects-section-title {
+	text-align: center;
+	margin-bottom: 50px;
+	color: var(--primary-color);
+	color: var(--primary-color);
+	font-family: var(--secondary-font);
+	font-size: 36px;
+	font-weight: 600;
+}
+
 .all-projects-container {
-	display: flex;
-	flex-wrap: wrap;
-	align-items: stretch;
-	padding-top: 30px;
-	padding-bottom: 30px;
-	margin-left: -35px;
-	margin-right: -35px;
-}
-
-.all-projects-project {
-	width: calc(100% / 3);
-	box-sizing: border-box;
-	padding: 10px;
-	overflow: hidden;
-}
-
-@media (max-width: 600px) {
-	.all-projects-project {
-		width: calc(100% / 2);
-	}
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	gap: 30px;
+	padding: 0 40px;
 }
